Fixed navbar overlap issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,7 +17,7 @@ h1,h2,h3,h4,h5,h6 {
 	text-align: left;
 }
 .navbar{
-	z-index: 1;
+	z-index: 1;	!important
 	overflow: hidden;
 	margin: 0;
 	width: 100%;
